Fix header on mobile

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -308,7 +308,6 @@ button.btn.btn-primary {
     .display-1{
         display: inline-block;
         margin: 0px;
-        margin-left: 24px;
     }
 
     #triadic-save {
